jena-shex/src/test/files/spec/negativeSyntax/1literalLength2.shex
<http://a.example/IssueShape> {
   <http://a.example/p1> LITERAL LENGTH 20 LENGTH 21
}
